--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -15,11 +15,12 @@ services:
       - VALIDATION=${VALIDATION}
       - EMAIL=${EMAIL}
     volumes:
-      - letsencrypt:/config
+      - config/production:/config
+      - src:/var/www/html
     ports:
       - '${NGINX_HTTP_PORT}:80'
       - '${NGINX_HTTPS_PORT}:443'
     restart: unless-stopped
 
 volumes:
-  letsencrypt:
+  production:
