--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,10 +21,10 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             cd ~/current/config/nginx/www
-            docker exec app php artisan down --message="Upgrading.. Be with you shortly." --retry=60
+            docker exec app php artisan down --message="Upgrading.. We'll be back shortly." --retry=60
             git checkout master
             git pull
-            docker run --rm -t -w /app -v $PWD:/app node:14-alpine sh -c "npm install && npm run prod"
+            docker run --rm -t -w /app -v $PWD:/app node:14-alpine sh -c "npm install --production && npm run prod"
             docker run --rm -t -v $PWD/config/nginx/www:/app composer install --optimize-autoloader --no-dev
             docker exec php artisan migrate
             docker exec php artisan up
