fix: mount front and back in case of dependency
There isn't really a need but I've encountered situations where there was a
filesystme dependency between front and backend. This change accomodates for
those scenario's.

Bad practice in case your front and back end need to scale independently from
one another among other reasons..

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,7 +9,7 @@ services:
       - SSH_AUTH_SOCK=/config/ssh-agent
     volumes:
       - $SSH_AUTH_SOCK:/config/ssh-agent
-      - ../api:/config/www
+      - ../:/config/www
 
   adminer:
     image: adminer
