--- a/.env.example
+++ b/.env.example
@@ -6,15 +6,22 @@ NGINX_HTTP_PORT=80
 NGINX_HTTPS_PORT=443
 
 DB_PORT=3306
-MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
-MYSQL_DATABASE=dbname
+MYSQL_DATABASE=laravel
 MYSQL_USER=default
 MYSQL_PASSWORD=secret
+MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
 
 REDIS_PORT=6379
 
+MAILHOG_PORT=1025
+MAILHOG_DASHBOARD_PORT=8025
+
+PHPMYADMIN_PORT=8080
+
 REPOSITORY=docker-base
 DOMAIN=
-EMAIL=3071062+99linesofcode@users.noreply.github.com
+EMAIL=
 SUBDOMAINS=www,
 VALIDATION=http
+
+FLY_XDEBUG_MODE='develop,debug'
