--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -6,14 +6,28 @@ services:
       context: .
       dockerfile: Dockerfile.override
     environment:
-      - SSH_AUTH_SOCK=/config/ssh-agent
+      SSH_AUTH_SOCK: '/config/ssh-agent'
+      XDEBUG_MODE: '${FLY_XDEBUG_MODE:-off}'
     volumes:
       - $SSH_AUTH_SOCK:/config/ssh-agent
       - ../:/config/www
 
-  adminer:
-    image: adminer
-    container_name: linesofcode.adminer
+  mailhog:
+    image: 'mailhog/mailhog:latest'
+    container_name: linesofcode.mailhog
+    ports:
+      - ${MAILHOG_PORT:-1025}:1025
+      - ${MAILHOG_DASHBOARD_PORT:-8025}:8025
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    links:
+      - mysql
+    container_name: linesofcode.phpmyadmin
+    environment:
+      - MYSQL_USER=${MYSQL_USER:-default}
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD:-secret}
+      - PMA_HOST=linesofcode.mysql
     restart: unless-stopped
     ports:
-      - 8080:8080
+      - ${PHPMYADMIN_PORT:-8080}:80
