--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,8 @@ MYSQL_ROOT_PASSWORD=MYSQL_ROOT_PASSWORD
 
 REDIS_PORT=6379
 
-MAILHOG_PORT=1025
-MAILHOG_DASHBOARD_PORT=8025
+MAIL_PORT=1025
+MAIL_DASHBOARD_PORT=8025
 
 PHPMYADMIN_PORT=8080
 
