--- a/php/8.1/Dockerfile
+++ b/php/8.1/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:8.1-rc-fpm-alpine
+FROM php:8.1-cli-alpine
 
-LABEL maintainer="Jordy Schreuders"
+LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 RUN apk update && apk add --no-cache --virtual .build-deps \
   $PHPIZE_DEPS \
@@ -9,22 +9,22 @@ RUN apk update && apk add --no-cache --virtual .build-deps \
   sqlite-dev \
   libxml2-dev \
   linux-headers \
-  # Install dependencies
+  && echo "*** Install dependencies ***" \
   && apk add \
   curl \
   oniguruma-dev \
   postgresql-libs \
-  # Install PECL and PEAR extensions
+  && echo "*** Install PECL and PEAR extensions ***" \
   && pecl install \
   redis \
   xdebug \
-  # Enable PECL and PEAR extensions
+  && echo "*** Enable PECL and PEAR extensions ***" \
   && docker-php-ext-enable \
   redis \
   xdebug \
-  # Configure PHP extensions
+  && echo "*** Configure PHP extensions ***" \
   # && docker-php-ext-configure gd --with-freetype --with-jpeg \
-  # Install PHP extensions
+  && echo "*** Install PHP extensions ***" \
   && docker-php-ext-install \
   bcmath \
   curl \
@@ -33,5 +33,5 @@ RUN apk update && apk add --no-cache --virtual .build-deps \
   pdo_pgsql \
   pdo_sqlite \
   xml \
-  # Cleanup build dependencies
+  && echo "*** Cleanup build dependencies ***" \
   && apk del -f .build-deps
