--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     volumes:
       - '/home/jordy/.npmrc:/root/.npmrc'
       - '/home/jordy/.config/composer/auth.json:/root/.config/composer/auth.json'
-      - '.:/var/www/html'
+      - '..:/var/www/html'
     networks:
       hostnet: {}
 
@@ -26,7 +26,7 @@ services:
     container_name: ${APP_NAME}.node
     image: 'node:${NODE_VERSION}'
     user: node
-    working_dir: '/var/www/html/nuxt'
+    working_dir: '/var/www/html'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
@@ -37,7 +37,7 @@ services:
       - NUXT_HOST=node
       - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
     volumes:
-      - '../nuxt:/var/www/html/nuxt'
+      - '../nuxt:/var/www/html'
     command: 'npm run dev'
     depends_on:
       - php
@@ -47,7 +47,7 @@ services:
     build:
       context: ./docker/php/8.1
       dockerfile: Dockerfile
-    working_dir: '/var/www/html/api'
+    working_dir: '/var/www/html'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
@@ -57,7 +57,7 @@ services:
       XDEBUG_MODE: '${PHP_XDEBUG_MODE:-off}'
       XDEBUG_CONFIG: '${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}'
     volumes:
-      - '.:/var/www/html/api'
+      - '../api:/var/www/html'
     command: '/usr/local/bin/php -d variables_order=EGPCS /var/www/html/api/artisan serve --host=0.0.0.0 --port=80'
     depends_on:
       # - mysql
