--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+name: 'docker-base-php'
 
 services:
   devcontainer:
     container_name: ${APP_NAME}.devcontainer
     build:
-      context: ./docker/devcontainer
+      context: ./devcontainer
       dockerfile: Dockerfile
       args:
         - WWWUSER=${WWWUSER:-1000}
@@ -19,8 +19,7 @@ services:
       - '/home/jordy/.npmrc:/root/.npmrc'
       - '/home/jordy/.config/composer/auth.json:/root/.config/composer/auth.json'
       - '..:/var/www/html'
-    networks:
-      hostnet: {}
+    network_mode: "host"
 
   node:
     container_name: ${APP_NAME}.node
@@ -45,25 +44,25 @@ services:
   php:
     container_name: ${APP_NAME}.php
     build:
-      context: ./docker/php/cli/8.1
+      context: ./cli/8.1
       dockerfile: Dockerfile
     working_dir: '/var/www/html'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
-      - '${APP_PORT:-80}:80'
+      - '${FORWARD_PHP_PORT:-80}:80'
     environment:
       WWWUSER: '${WWWUSER}'
       XDEBUG_MODE: '${PHP_XDEBUG_MODE:-off}'
       XDEBUG_CONFIG: '${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}'
     volumes:
       - '../api:/var/www/html'
-    command: '/usr/local/bin/php -d variables_order=EGPCS /var/www/html/api/artisan serve --host=0.0.0.0 --port=80'
+    command: '/usr/local/bin/php -d variables_order=EGPCS /var/www/html/artisan serve --host=0.0.0.0 --port=80'
     depends_on:
-      # - mysql
       - postgresql
       - redis
       - meilisearch
+      # - mysql
       # - selenium
 
   postgresql:
@@ -72,10 +71,9 @@ services:
     ports:
       - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
-      POSTGRES_PASSWORD: '${DB_PASSWORD}'
-      POSTGRES_USER: '${DB_USERNAME}'
-      POSTGRES_DB: '${DB_DATABASE}'
-      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+      POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+      POSTGRES_USER: '${DB_USERNAME:-default}'
+      POSTGRES_DB: '${DB_DATABASE:-docker-base}'
     volumes:
       - 'vol.pgsql:/var/lib/pgsql'
       # - './vendor/laravel/sail/database/pqsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
@@ -174,15 +172,12 @@ services:
   #     PMA_PMADB: 'pmadb'
   #     UPLOAD_LIMIT: 256M
   #   ports:
-  #     - '${FORWARD_PHPMYADMIN_PORT:-8888}:80'
+  #     - '${FORWARD_DB_PORT:-8888}:80'
 
 networks:
   default:
     name: '${APP_NAME}.net'
     driver: bridge
-  hostnet:
-    name: '${APP_NAME}.host'
-    external: true
 
 volumes:
   'vol.pgsql':
