refactor: use PUID and PGID

--- a/php/.env.example
+++ b/php/.env.example
@@ -3,8 +3,8 @@ APP_ENV="development"
 
 TZ="Europe/Amsterdam"
 
-WWWUSER=1000
-WWWGROUP=1000
+PUID=1000
+PGID=1000
 
 # Node.js
 NODE_VERSION=18.13.0
