--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       context: ./devcontainer
       dockerfile: Dockerfile
       args:
-        - WWWUSER=${WWWUSER:-1000}
-        - WWWGROUP=${WWWGROUP:-1000}
+        - PUID=${PUID:-1000}
+        - PGID=${PGID:-1000}
       ssh:
         - default
     working_dir: '/var/www/html'
@@ -52,7 +52,6 @@ services:
     ports:
       - '${FORWARD_PHP_PORT:-80}:80'
     environment:
-      WWWUSER: '${WWWUSER}'
       XDEBUG_MODE: '${PHP_XDEBUG_MODE:-off}'
       XDEBUG_CONFIG: '${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}'
     volumes:
