--- a/prod/docker-compose.yml
+++ b/prod/docker-compose.yml
@@ -1,23 +1,43 @@
-version: '3'
+name: 'docker-base-php'
+
+# TODO testen met bestaande laravel applicatie
+# TODO doet xdebug het met NGINX ertussen?
+# TODO moet ik de extra host nog wel forwarden?
 
 services:
-  php:
-    container_name: ${APP_NAME}.php
+  swag:
+    container_name: ${APP_NAME}.swag
     build:
-      context: ./docker/php/8.1
+      context: ./swag
       dockerfile: Dockerfile
-    working_dir: '/var/www/html/api'
+    environment:
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
+      - TZ=Europe/Amsterdam
+      - URL=99linesofcode.nl
+      - SUBDOMAINS=wildcard
+      - VALIDATION=dns
+      - DNSPLUGIN=cloudflare
+    ports:
+      - 80:80
+      - 433:433
+    volumes:
+      - './swag/config:/config'
+    depends_on:
+      - heimdall
+
+  heimdall:
+    container_name: ${APP_NAME}.heimdall
+    build:
+      context: ./php/8.1
+      dockerfile: Dockerfile
     extra_hosts:
       - 'host.docker.internal:host-gateway'
-    ports:
-      - '${APP_PORT:-80}:80'
     environment:
-      WWWUSER: '${WWWUSER}'
-      XDEBUG_MODE: '${PHP_XDEBUG_MODE:-off}'
-      XDEBUG_CONFIG: '${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
     volumes:
-      - '.:/var/www/html/api'
-    command: '/usr/local/bin/php -d variables_order=EGPCS /var/www/html/api/artisan serve --host=0.0.0.0 --port=80'
+      - '../api:/app/www'
     depends_on:
       - postgresql
 
@@ -27,10 +47,9 @@ services:
     ports:
       - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
-      POSTGRES_PASSWORD: '${DB_PASSWORD}'
-      POSTGRES_USER: '${DB_USERNAME}'
-      POSTGRES_DB: '${DB_DATABASE}'
-      MYSQL_ALLOW_EMPTY_PASSWORD: 1
+      POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
+      POSTGRES_USER: '${DB_USERNAME:-default}'
+      POSTGRES_DB: '${DB_DATABASE:-docker-base}'
     volumes:
       - 'vol.pgsql:/var/lib/pgsql'
       # - './vendor/laravel/sail/database/pqsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
