--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -1,68 +1,6 @@
-name: 'docker-base-php'
+name: 'docker-base'
 
 services:
-  devcontainer:
-    container_name: ${APP_NAME}.devcontainer
-    build:
-      context: ./devcontainer
-      dockerfile: Dockerfile
-      ssh:
-        - default
-    working_dir: '/var/www/html'
-    environment:
-      - PUID=${PUID:-1000}
-      - PGID=${PGID:-1000}
-      - TZ=${TIMEZONE:-Europe/Amsterdam}
-    tty: true
-    volumes:
-      - '/home/jordy/.npmrc:/root/.npmrc'
-      - '/home/jordy/.config/composer/auth.json:/root/.config/composer/auth.json'
-      - '..:/var/www/html'
-    network_mode: "host"
-
-  node:
-    container_name: ${APP_NAME}.node
-    image: 'node:${NODE_VERSION}'
-    user: node
-    working_dir: '/var/www/html'
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    ports:
-      - '${FORWARD_NODE_PORT:-3000}:3000'
-      - '${FORWARD_VITE_PORT:-24678}:24678'
-    environment:
-      - NODE_ENV=${APP_ENV}
-      - NUXT_HOST=node
-      - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
-    volumes:
-      - '../nuxt:/var/www/html'
-    command: 'npm run dev'
-    depends_on:
-      - php
-
-  php:
-    container_name: ${APP_NAME}.php
-    build:
-      context: ./cli/8.1
-      dockerfile: Dockerfile
-    working_dir: '/var/www/html'
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    ports:
-      - '${FORWARD_PHP_PORT:-80}:80'
-    environment:
-      XDEBUG_MODE: '${PHP_XDEBUG_MODE:-off}'
-      XDEBUG_CONFIG: '${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}'
-    volumes:
-      - '../api:/var/www/html'
-    command: '/usr/local/bin/php -d variables_order=EGPCS /var/www/html/artisan serve --host=0.0.0.0 --port=80'
-    depends_on:
-      - postgresql
-      - redis
-      - meilisearch
-      # - mysql
-      # - selenium
-
   postgresql:
     container_name: ${APP_NAME}.postgresql
     image: 'postgres:alpine'
@@ -73,7 +11,7 @@ services:
       POSTGRES_USER: '${DB_USERNAME:-default}'
       POSTGRES_DB: '${DB_DATABASE:-docker-base}'
     volumes:
-      - 'vol.pgsql:/var/lib/pgsql'
+      - 'vol.postgres:/var/lib/pgsql'
       # - './vendor/laravel/sail/database/pqsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
     healthcheck:
       test:
@@ -83,26 +21,6 @@ services:
         ]
       retries: 3
       timeout: 5s
-
-  # mysql:
-  #   container_name: ${APP_NAME}.mysql
-  #   image: 'mysql/mysql-server:8.0'
-  #   ports:
-  #     - '${FORWARD_DB_PORT:-3306}:3306'
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-  #     MYSQL_ROOT_HOST: '%'
-  #     MYSQL_DATABASE: '${DB_DATABASE}'
-  #     MYSQL_USER: '${DB_USERNAME}'
-  #     MYSQL_PASSWORD: '${DB_PASSWORD}'
-  #     MYSQL_ALLOW_EMPTY_PASSWORD: 1
-  #   volumes:
-  #     - 'vol.mysql:/var/lib/mysql'
-  #     # - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
-  #   healthcheck:
-  #     test: [ 'CMD', 'mysqladmin', 'ping', '-p${DB_PASSWORD}' ]
-  #     retries: 3
-  #     timeout: 5s
 
   redis:
     container_name: ${APP_NAME}.redis
@@ -142,48 +60,15 @@ services:
       - '${FORWARD_MAILHOG_PORT:-1025}:1025'
       - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
 
-  # selenium:
-  #   container_name: ${APP_NAME}.selenium
-  #   image: 'selenium/standalone-chrome'
-  #   volumes:
-  #     - '/dev/shm:/dev/shm'
-
-  pgadmin:
-    container_name: ${APP_NAME}.pgadmin
-    image: dpage/pgadmin4:latest
-    links:
-      - postgresql
-    environment:
-      PGADMIN_DEFAULT_EMAIL: '${DB_USERNAME}@host.com'
-      PGADMIN_DEFAULT_PASSWORD: '${DB_PASSWORD}'
-    ports:
-      - '${FORWARD_PGADMIN_PORT:-8888}:80'
-  # phpmyadmin:
-  #   container_name: ${APP_NAME}.phpmyadmin
-  #   image: phpmyadmin:latest
-  #   links:
-  #     - mysql
-  #   environment:
-  #     MYSQL_USER: '${DB_USERNAME}'
-  #     MYSQL_PASSWORD: '${DB_PASSWORD}'
-  #     PMA_HOST: '${APP_NAME}.mysql'
-  #     PMA_PMADB: 'pmadb'
-  #     UPLOAD_LIMIT: 256M
-  #   ports:
-  #     - '${FORWARD_DB_PORT:-8888}:80'
-
 networks:
   default:
     name: '${APP_NAME}.net'
     driver: bridge
 
 volumes:
-  'vol.pgsql':
-    name: '${APP_NAME}.vol.pgsql'
+  'vol.postges':
+    name: '${APP_NAME}.vol.postges'
     driver: local
-  # 'vol.mysql':
-  #   name: '${APP_NAME}.vol.mysql'
-  #   driver: local
   'vol.redis':
     name: '${APP_NAME}.vol.redis'
     driver: local
