--- a/php/docker-compose.dev.yml
+++ b/php/docker-compose.dev.yml
@@ -69,3 +69,10 @@ services:
       PGADMIN_DEFAULT_PASSWORD: '${DB_PASSWORD}'
     ports:
       - '${FORWARD_PGADMIN_PORT:-8888}:80'
+
+  mailhog:
+    container_name: ${APP_NAME}.mailhog
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
