--- a/php/docker-compose.dev.yml
+++ b/php/docker-compose.dev.yml
@@ -31,7 +31,7 @@ services:
       - '${FORWARD_NODE_PORT:-3000}:3000'
       - '${FORWARD_VITE_PORT:-24678}:24678'
     environment:
-      - NODE_ENV=${APP_ENV}
+      - NODE_ENV=${APP_ENV:-development}
       - NUXT_HOST=node
       - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
     volumes:
@@ -43,34 +43,40 @@ services:
   php:
     container_name: ${APP_NAME}.php
     build:
-      context: ./php/8.1/cli
+      context: ./php/8.0
       dockerfile: Dockerfile
-    working_dir: '/var/www/html'
+    working_dir: '/app/www'
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
       - '${FORWARD_PHP_PORT:-80}:80'
     environment:
-      XDEBUG_MODE: '${PHP_XDEBUG_MODE:-off}'
-      XDEBUG_CONFIG: '${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}'
+      - PUID=${PUID:-1000}
+      - PGID=${PGID:-1000}
+      - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
+      - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
     volumes:
-      - '../api:/var/www/html'
-    command: '/usr/local/bin/php -d variables_order=EGPCS /var/www/html/artisan serve --host=0.0.0.0 --port=80'
+      - '/home/jordy/Development/bttr/klikvrijwilligers/api:/config/www'
     depends_on:
-      - postgresql
-      - redis
       - meilisearch
+      - mysql
+      - redis
 
-  pgadmin:
-    container_name: ${APP_NAME}.pgadmin
-    image: dpage/pgadmin4:latest
-    links:
-      - postgresql
-    environment:
-      PGADMIN_DEFAULT_EMAIL: '${DB_USERNAME}@host.com'
-      PGADMIN_DEFAULT_PASSWORD: '${DB_PASSWORD}'
-    ports:
-      - '${FORWARD_PGADMIN_PORT:-8888}:80'
+    phpmyadmin:
+      image: phpmyadmin:latest
+      container_name: ${APP_NAME}.phpmyadmin
+      environment:
+        - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+        - MYSQL_USER=${DB_USERNAME}
+        - MYSQL_PASSWORD=${DB_PASSWORD}
+        - PMA_HOST=${APP_NAME}.mysql
+        - PMA_PMADB=phpmyadmin
+        - UPLOAD_LIMIT=512M
+      restart: unless-stopped
+      ports:
+        - ${PHPMYADMIN_PORT:-8888}:80
+      depends_on:
+        - mysql
 
   mailhog:
     container_name: ${APP_NAME}.mailhog
