--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -1,24 +1,21 @@
 name: 'docker-base'
 
 services:
-  postgresql:
-    container_name: ${APP_NAME}.postgresql
-    image: 'postgres:alpine'
+  mysql:
+    container_name: ${APP_NAME}.mysql
+    image: 'mysql/mysql-server:8.0'
     ports:
       - '${FORWARD_DB_PORT:-3306}:3306'
     environment:
-      POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
-      POSTGRES_USER: '${DB_USERNAME:-default}'
-      POSTGRES_DB: '${DB_DATABASE:-docker-base}'
-    volumes:
-      - 'vol.postgres:/var/lib/pgsql'
-      # - './vendor/laravel/sail/database/pqsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_ROOT_HOST=%
+      - MYSQL_DATABASE=${DB_DATABASE}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+    # volumes:
+    #   - './vendor/laravel/sail/database/mysql/create-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
     healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "sh -c 'pg_isready -U ${DB_USERNAME} -d ${DB_PASSWORD}'"
-        ]
+      test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
       retries: 3
       timeout: 5s
 
@@ -59,8 +56,8 @@ networks:
     driver: bridge
 
 volumes:
-  'vol.postges':
-    name: '${APP_NAME}.vol.postges'
+  'vol.mysql':
+    name: '${APP_NAME}.vol.mysql'
     driver: local
   'vol.redis':
     name: '${APP_NAME}.vol.redis'
