--- a/php/.env.example
+++ b/php/.env.example
@@ -1,13 +1,13 @@
 APP_NAME="docker-base"
 USER="jordy"
+PUID=1000
+PGID=1000
 
-# Node.js
 NODE_VERSION=18.13.0
 
-# PHP
+PHP_VERSION=8.1
 PHP_XDEBUG_MODE="develop,debug"
 
-# Database
 DB_PASSWORD="secret"
 DB_USERNAME="default"
 DB_DATABASE="docker-base"
