--- a/php/docker-compose.prod.yml
+++ b/php/docker-compose.prod.yml
@@ -5,8 +5,8 @@ services:
       context: ./php/swag
       dockerfile: Dockerfile
     environment:
-      - PUID=${PUID:-1000}
-      - PGID=${PGID:-1000}
+      - PUID=${PUID}
+      - PGID=${PGID}
       - TZ=Europe/Amsterdam
       - URL=99linesofcode.nl
       - SUBDOMAINS=www,
@@ -14,29 +14,16 @@ services:
       - EMAIL=99linesofcode@gmail.com
       - VALIDATION=http
     ports:
-      - 80:80
-      - 443:443
+      - '${FORWARD_PHP_HTTP_PORT:-80}:80'
+      - '${FORWARD_PHP_HTTPS_PORT:-443}:443'
     # volumes:
     #   - './config/swag:/config'
     depends_on:
       - php
 
   php:
-    container_name: ${APP_NAME}.php
-    build:
-      context: ./php/8.1/fpm
-      dockerfile: Dockerfile
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    environment:
-      - PUID=${PUID:-1000}
-      - PGID=${PGID:-1000}
-    volumes:
-      - '../api:/app/www'
-    depends_on:
-      - postgresql
-      - redis
-      - meilisearch
+    # volumes:
+    #   - '/PATH_TO_PROJECT_DIRECTORY_HERE:/config/www'
 
 networks:
   default:
