--- a/php/devcontainer/Dockerfile
+++ b/php/devcontainer/Dockerfile
@@ -17,6 +17,14 @@ RUN \
   && gpg --recv-key 0x14aa40ec0831756756d7f66c4f4ea0aae5267a6c \
   && gpg --export 0x14aa40ec0831756756d7f66c4f4ea0aae5267a6c >> /usr/share/keyrings/ppa_ondrej_php.gpg \
   && echo "deb [signed-by=/usr/share/keyrings/ppa_ondrej_php.gpg] https://ppa.launchpadcontent.net/ondrej/php/ubuntu jammy main" >> /etc/apt/sources.list.d/ppa_ondrej_php.list \
-  && apt-get update && apt-get install -y --no-install-recommends $PHP_DEPS \
+  && apt-get update && apt-get install -y --no-install-recommends \
   $PHP_VERSION-cli \
   && php -r "readfile('https://getcomposer.org/installer');" | php -- --install-dir=/usr/local/bin --filename=composer
+
+USER $USER
+
+RUN \
+  echo "*** Setting up user environment ***" \
+  && sudo chown -R $USER:$USER /app /config /defaults \
+  # TODO this can probably be handled in .zshrc later on
+  && export PATH="$HOME/.local/bin:$PATH"
