--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   php:
     container_name: ${APP_NAME}.php
     build:
-      context: ./php/8.1
+      context: ./8.1
       dockerfile: Dockerfile
     extra_hosts:
       - 'host.docker.internal:host-gateway'
@@ -12,7 +12,7 @@ services:
       - '${FORWARD_PHP_HTTP_PORT:-80}:80'
       - '${FORWARD_PHP_HTTPS_PORT:-443}:443'
     environment:
-      - PHP_VERSION=php${PHP_VERSION/./}
+      - PHP_VERSION=php$${PHP_VERSION/./}
       - PUID=${PUID}
       - PGID=${PGID}
     depends_on:
