--- a/php/devcontainer/Dockerfile
+++ b/php/devcontainer/Dockerfile
@@ -6,7 +6,7 @@ LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 ARG DEBIAN_FRONTEND=noninteractive
 
-ENV PHP_VERSION="php8.1"
+ENV PHP_VERSION="8.1"
 
 RUN \
   echo "*** Set up PHP and Composer ***" \
@@ -18,7 +18,7 @@ RUN \
   && gpg --export 0x14aa40ec0831756756d7f66c4f4ea0aae5267a6c >> /usr/share/keyrings/ppa_ondrej_php.gpg \
   && echo "deb [signed-by=/usr/share/keyrings/ppa_ondrej_php.gpg] https://ppa.launchpadcontent.net/ondrej/php/ubuntu jammy main" >> /etc/apt/sources.list.d/ppa_ondrej_php.list \
   && apt-get update && apt-get install -y --no-install-recommends \
-  $PHP_VERSION-cli \
+  php$PHP_VERSION-cli \
   && php -r "readfile('https://getcomposer.org/installer');" | php -- --install-dir=/usr/local/bin --filename=composer
 
 USER $USER
