--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -4,15 +4,17 @@ services:
   php:
     container_name: ${APP_NAME}.php
     build:
-      context: ./8.1
+      context: ./bttr
       dockerfile: Dockerfile
+      args:
+        - PACKAGE_VERSION=8.1
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
       - '${FORWARD_PHP_HTTP_PORT:-80}:80'
       - '${FORWARD_PHP_HTTPS_PORT:-443}:443'
     environment:
-      - PHP_VERSION=php$${PHP_VERSION/./}
+      - PHP_VERSION=81
       - PUID=${PUID}
       - PGID=${PGID}
     depends_on:
