--- a/php/php/8.1/Dockerfile
+++ b/php/php/8.1/Dockerfile
@@ -1,5 +1,7 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/99linesofcode/php:8.0
+FROM ghcr.io/99linesofcode/php:8.1
 
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
+
+COPY root/ /
