--- a/php/php/Dockerfile
+++ b/php/php/Dockerfile
@@ -1,33 +1,33 @@
 # syntax=docker/dockerfile:1
 
-FROM ghcr.io/linuxserver/baseimage-alpine-nginx:3.16
+FROM ghcr.io/linuxserver/baseimage-alpine-nginx:3.17
 
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 # https://github.com/just-containers/s6-overlay#customizing-s6-behaviour
 ENV S6_BEHAVIOUR_IF_STAGE2_FAILS=2
-ENV PHP_VERSION="php81"
+ENV PHP_VERSION="81"
 
 RUN \
   echo "*** Installing runtime packages ***" && \
   apk add --no-cache --upgrade \
-  $PHP_VERSION-ctype \
-  $PHP_VERSION-curl \
-  $PHP_VERSION-intl \
-  $PHP_VERSION-pdo_pgsql \
-  $PHP_VERSION-pdo_sqlite \
-  $PHP_VERSION-pdo_mysql \
-  $PHP_VERSION-tokenizer \
-  $PHP_VERSION-zip \
-  $PHP_VERSION-pecl-xdebug \
+  php$PHP_VERSION-ctype \
+  php$PHP_VERSION-curl \
+  php$PHP_VERSION-intl \
+  php$PHP_VERSION-pdo_pgsql \
+  php$PHP_VERSION-pdo_sqlite \
+  php$PHP_VERSION-pdo_mysql \
+  php$PHP_VERSION-tokenizer \
+  php$PHP_VERSION-zip \
+  php$PHP_VERSION-pecl-xdebug \
   && echo "*** Installing Laravel specific runtime packages ***" && \
   apk add --no-cache --upgrade \
-  $PHP_VERSION-bcmath \
-  $PHP_VERSION-dom \
-  $PHP_VERSION-pecl-redis \
+  php$PHP_VERSION-bcmath \
+  php$PHP_VERSION-dom \
+  php$PHP_VERSION-pecl-redis \
   && echo "*** Note: These are already installed by upstream ***" && \
   apk add --no-cache --upgrade \
-  $PHP_VERSION-fileinfo \
-  $PHP_VERSION-mbstring \
-  $PHP_VERSION-openssl \
-  $PHP_VERSION-xml
+  php$PHP_VERSION-fileinfo \
+  php$PHP_VERSION-mbstring \
+  php$PHP_VERSION-openssl \
+  php$PHP_VERSION-xml
