refactor: extract dedicated BTTR compose file

--- a/php/docker-compose.prod.yml
+++ b/php/docker-compose.prod.yml
@@ -2,8 +2,10 @@ services:
   swag:
     container_name: ${APP_NAME}.swag
     build:
-      context: ./php/swag
+      context: ./swag
       dockerfile: Dockerfile
+      args:
+        - PACKAGE_VERSION=latest
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
