--- a/bttr/docker-compose.yml
+++ b/bttr/docker-compose.yml
@@ -1,11 +1,35 @@
 name: 'docker-base'
 
 services:
+  devcontainer:
+    container_name: ${APP_NAME}.devcontainer
+    build:
+      context: ./devcontainer
+      dockerfile: Dockerfile
+      # See https://docs.docker.com/compose/compose-file/build/#ssh
+      ssh:
+        - default
+      args:
+        - PACKAGE_VERSION=latest
+        - PHP_VERSION=8.0
+    working_dir: '/config/www'
+    # See https://docs.docker.com/compose/environment-variables/envvars-precedence/
+    environment:
+      - TZ=${TIMEZONE:-Europe/Amsterdam}
+    tty: true
+    volumes:
+      - '/home/${USER}/.npmrc:/root/.npmrc'
+      - '/home/${USER}/.config/composer/auth.json:/root/.config/composer/auth.json'
+      - '/home/jordy/Development/bttr/${APP_NAME}:/config/www'
+
   php:
     container_name: ${APP_NAME}.php
     build:
-      context: ../base/php/8.1
+      context: ./php
       dockerfile: Dockerfile
+      args:
+        - PACKAGE_VERSION=8.0
+        - PHP_VERSION=8
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     ports:
@@ -14,6 +38,10 @@ services:
     environment:
       - PUID=${PUID}
       - PGID=${PGID}
+      - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
+      - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
+    volumes:
+      - '/home/jordy/Development/bttr/${APP_NAME}/api:/config/www'
     depends_on:
       - meilisearch
       - mysql
@@ -21,7 +49,7 @@ services:
 
   node:
     container_name: ${APP_NAME}.node
-    image: 'node:18.14.0'
+    image: 'node:14.21.1'
     user: node
     working_dir: '/var/www/html'
     extra_hosts:
@@ -33,8 +61,34 @@ services:
       - NODE_ENV=${APP_ENV:-development}
       - NUXT_HOST=node
       - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
+    volumes:
+      - '/home/jordy/Development/bttr/${APP_NAME}/nuxt:/config/www'
+    command: 'npm run dev'
     depends_on:
       - php
+
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: ${APP_NAME}.phpmyadmin
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - PMA_HOST=${APP_NAME}.mysql
+      - PMA_PMADB=phpmyadmin
+      - UPLOAD_LIMIT=512M
+    restart: unless-stopped
+    ports:
+      - ${PHPMYADMIN_PORT:-8888}:80
+    depends_on:
+      - mysql
+
+  mailhog:
+    container_name: ${APP_NAME}.mailhog
+    image: 'mailhog/mailhog:latest'
+    ports:
+      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
+      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
 
   mysql:
     container_name: ${APP_NAME}.mysql
