--- a/php/docker-compose.dev.yml
+++ b/php/docker-compose.dev.yml
@@ -8,13 +8,11 @@ services:
       ssh:
         - default
       args:
-        - PACKAGE_VERSION=8.0
+        - PACKAGE_VERSION=latest
         - PHP_VERSION=8.0
     working_dir: '/config/www'
     # See https://docs.docker.com/compose/environment-variables/envvars-precedence/
     environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
       - TZ=${TIMEZONE:-Europe/Amsterdam}
     tty: true
     volumes:
@@ -30,24 +28,9 @@ services:
       - '/home/jordy/Development/bttr/${APP_NAME}/api:/config/www'
 
   node:
-    container_name: ${APP_NAME}.node
-    image: 'node:16.19.0'
-    user: node
-    working_dir: '/var/www/html'
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    ports:
-      - '${FORWARD_NODE_PORT:-3000}:3000'
-      - '${FORWARD_VITE_PORT:-24678}:24678'
-    environment:
-      - NODE_ENV=${APP_ENV:-development}
-      - NUXT_HOST=node
-      - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
     volumes:
-      - '../nuxt:/var/www/html'
+      - '/home/jordy/Development/bttr/${APP_NAME}/nuxt:/config/www'
     command: 'npm run dev'
-    depends_on:
-      - php
 
   phpmyadmin:
     image: phpmyadmin:latest
