--- a/php/docker-compose.dev.yml
+++ b/php/docker-compose.dev.yml
@@ -9,27 +9,28 @@ services:
         - default
       args:
         - PACKAGE_VERSION=latest
-        - PHP_VERSION=8.0
+        - PHP_VERSION=8.1
     working_dir: '/config/www'
     # See https://docs.docker.com/compose/environment-variables/envvars-precedence/
     environment:
       - TZ=${TIMEZONE:-Europe/Amsterdam}
     tty: true
     volumes:
-      - '/home/${USER}/.npmrc:/config/.npmrc:ro'
-      - '/home/${USER}/.config/composer/auth.json:/config/.config/composer/auth.json:ro'
-      - '/home/jordy/Development/bttr/${APP_NAME}:/config/www'
+      - '$HOME/.ssh:/config/.ssh'
+      - '$HOME/.npmrc:/config/.npmrc'
+      - '$HOME/.config/composer/auth.json:/config/.config/composer/auth.json'
+      - '$HOME/Development/99linesofcode/${APP_NAME}:/config/www'
 
   php:
     environment:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
     volumes:
-      - '/home/jordy/Development/bttr/${APP_NAME}/api:/config/www'
+      - '$HOME/Development/99linesofcode/${APP_NAME}/api:/config/www'
 
   node:
     volumes:
-      - '/home/jordy/Development/bttr/${APP_NAME}/nuxt:/config/www'
+      - '$HOME/Development/99linesofcode/${APP_NAME}/nuxt:/var/www/html'
     command: 'npm run dev'
 
   phpmyadmin:
@@ -50,7 +51,7 @@ services:
 
   mailpit:
     container_name: ${APP_NAME}.mailpit
-    image: 'axllent/mailpit:latest'
+    image: axllent/mailpit:latest
     ports:
       - '${FORWARD_MAILHOG_PORT:-1025}:1025'
       - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
