--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -1,5 +1,3 @@
-name: 'docker-base'
-
 services:
   php:
     container_name: ${APP_NAME}.php
@@ -47,7 +45,7 @@ services:
       - MYSQL_PASSWORD=${DB_PASSWORD}
     volumes:
       - 'vol.mysql:/var/lib/mysql'
-      # - '$HOME:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+      # - '$HOME/dbdump.sql:/docker-entrypoint-initdb.d/dbdump.sql'
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
       retries: 3
