feat(ruby): scaffold rails development environment
Ruby
Mysql
PhpMyAdmin
Swag production container

At this point, we are serving rails directly with Puma. It reverse proxy
to the ruby container instead, similiar to how this is setup for our PHP
environment.

--- a/ruby/devcontainer/Dockerfile
+++ b/ruby/devcontainer/Dockerfile
@@ -5,24 +5,31 @@ FROM ghcr.io/99linesofcode/devcontainer:latest
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 ARG DEBIAN_FRONTEND=noninteractive
+ARG USER=abc
 ARG BUILD_DEPS="autoconf bison patch build-essential rustc libssl-dev libyaml-dev libreadline6-dev zlib1g-dev libgmp-dev libncurses5-dev libffi-dev libgdbm6 libgdbm-dev libdb-dev uuid-dev"
 
 ENV RUBY_VERSION="3.2.1"
 
-SHELL ["/bin/bash", "-c"]
+SHELL ["zsh", "-c"]
+
+USER root
 
 RUN \
-  && echo "*** Install Ruby through ASDF ***" \
+  echo "*** Installing Ruby through Asdf ***" \
   && apt-get update && apt-get install -y --no-install-recommends \
   $BUILD_DEPS \
-  && source /config/.asdf/asdf.sh \
-  && asdf plugin add ruby https://github.com/asdf-vm/asdf-ruby.git \
-  && asdf install ruby $RUBY_VERSION
+  libmariadb-dev \
+  && echo "*** Cleaning up build dependencies ***" \
+  && apt-get -y autoremove \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 USER $USER
 
 RUN \
-  echo "*** Setting up user environment ***" \
-  && sudo chown -R $USER:$USER /app /config /defaults \
-  # TODO this can probably be handled in .zshrc later on
-  && export PATH="$HOME/.local/bin:$PATH"
+  echo "*** Installing Ruby and Rails ***" \
+  && source /config/.asdf/asdf.sh \
+  && asdf plugin add ruby https://github.com/asdf-vm/asdf-ruby.git \
+  && asdf install ruby $RUBY_VERSION \
+  && asdf global ruby $RUBY_VERSION \
+  && gem install rails
