feat(php): prepare container setup for mrsk
This commit moves away from linuxserver.io images, pulls apart nginx and
php-fpm and does away with the custom Dockerfile for the php container
since all the dependencies necessary for running a Laravel 9.x
application are packaged by default.

At this point, we have a very rudimentary webserver configuration that
may need some more fine tuning. Specifically the use of SSL both in
development and production.

--- a/php/devcontainer/Dockerfile
+++ b/php/devcontainer/Dockerfile
@@ -1,14 +1,14 @@
 # syntax=docker/dockerfile:1
 
-ARG PACKAGE_VERSION="latest"
+ARG PHP_VERSION="8.1"
+ARG BASE_IMAGE="ghcr.io/99linesofcode/devcontainer:${PHP_VERSION}"
 
-FROM ghcr.io/99linesofcode/devcontainer:$PACKAGE_VERSION
+FROM ${BASE_IMAGE}
 
 LABEL maintainer="Jordy Schreuders <jordy@schreuders.it>"
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG USER=abc
-ARG PHP_VERSION="8.1"
 
 SHELL ["zsh", "-c"]
 
