--- a/php/docker-compose.dev.yml
+++ b/php/docker-compose.dev.yml
@@ -8,30 +8,45 @@ services:
       ssh:
         - default
       args:
-        - PACKAGE_VERSION=latest
         - PHP_VERSION=8.1
-    working_dir: '/config/www'
+    working_dir: /config/www
     # See https://docs.docker.com/compose/environment-variables/envvars-precedence/
     environment:
       - TZ=${TIMEZONE:-Europe/Amsterdam}
     tty: true
     volumes:
-      - '$HOME/.ssh:/config/.ssh'
-      - '$HOME/.npmrc:/config/.npmrc'
-      - '$HOME/.config/composer/auth.json:/config/.config/composer/auth.json'
-      - '$HOME/Development/99linesofcode/${APP_NAME}:/config/www'
+      - $HOME/.ssh:/config/.ssh
+      - $HOME/.npmrc:/config/.npmrc
+      - $HOME/.config/composer/auth.json:/config/.config/composer/auth.json
+      - $HOME/Development/99linesofcode/${APP_NAME}:/config/www
 
   php:
     environment:
       - XDEBUG_MODE=${PHP_XDEBUG_MODE:-off}
       - XDEBUG_CONFIG=${PHP_XDEBUG_CONFIG:-client_host=host.docker.internal}
     volumes:
-      - '$HOME/Development/99linesofcode/${APP_NAME}/api:/config/www'
+      - $HOME/Development/99linesofcode/${APP_NAME}/api:/config/www
 
-  node:
-    volumes:
-      - '$HOME/Development/99linesofcode/${APP_NAME}/nuxt:/var/www/html'
-    command: 'npm run dev'
+  # FIXME serve different urls for process.browser and SSR before we can migrate to a containerized node version
+  # node:
+  #   container_name: ${APP_NAME}.node
+  #   image: node:14.21.1
+  #   user: node
+  #   working_dir: /var/www/html
+  #   extra_hosts:
+  #     - host.docker.internal:host-gateway
+  #   ports:
+  #     - ${FORWARD_NODE_PORT:-3000}:3000
+  #     - ${FORWARD_VITE_PORT:-24678}:24678
+  #   environment:
+  #     - NODE_ENV=${APP_ENV:-development}
+  #     - NUXT_HOST=node
+  #     - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
+  #   volumes:
+  #     - /home/jordy/Development/bttr/${APP_NAME}/nuxt:/var/www/html
+  #   command: npm run dev
+  #   depends_on:
+  #     - php
 
   phpmyadmin:
     image: phpmyadmin:latest
@@ -53,5 +68,5 @@ services:
     container_name: ${APP_NAME}.mailpit
     image: axllent/mailpit:latest
     ports:
-      - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-      - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+      - ${FORWARD_MAILHOG_PORT:-1025}:1025
+      - ${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025
