--- a/php/docker-compose.yml
+++ b/php/docker-compose.yml
@@ -1,42 +1,31 @@
 services:
+  nginx:
+    container_name: ${APP_NAME}.nginx
+    image: nginx:alpine
+    ports:
+      - ${FORWARD_PHP_HTTP_PORT:-80}:80
+      - ${FORWARD_PHP_HTTPS_PORT:-443}:443
+    # See https://hub.docker.com/_/nginx
+    volumes:
+      - ./nginx/templates:/etc/nginx/templates
+      - $HOME/Development/99linesofcode/${APP_NAME}/api/public:/config/www/public
+    depends_on:
+      - php
+
   php:
     container_name: ${APP_NAME}.php
-    image: ghcr.io/99linesofcode/php:8.1
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    ports:
-      - '${FORWARD_PHP_HTTP_PORT:-80}:80'
-      - '${FORWARD_PHP_HTTPS_PORT:-443}:443'
-    environment:
-      - PUID=${PUID}
-      - PGID=${PGID}
+    image: php:fpm-alpine3.16
+    working_dir: /config/www
     depends_on:
       - meilisearch
       - mysql
       - redis
 
-  node:
-    container_name: ${APP_NAME}.node
-    image: node:18.14.0
-    user: node
-    working_dir: '/var/www/html'
-    extra_hosts:
-      - 'host.docker.internal:host-gateway'
-    ports:
-      - '${FORWARD_NODE_PORT:-3000}:3000'
-      - '${FORWARD_VITE_PORT:-24678}:24678'
-    environment:
-      - NODE_ENV=${APP_ENV:-development}
-      - NUXT_HOST=node
-      - NUXT_PORT=${FORWARD_NODE_PORT:-3000}
-    depends_on:
-      - php
-
   mysql:
     container_name: ${APP_NAME}.mysql
     image: mysql/mysql-server:8.0
     ports:
-      - '${FORWARD_DB_PORT:-3306}:3306'
+      - ${FORWARD_DB_PORT:-3306}:3306
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - MYSQL_ROOT_HOST=%
@@ -44,8 +33,8 @@ services:
       - MYSQL_USER=${DB_USERNAME}
       - MYSQL_PASSWORD=${DB_PASSWORD}
     volumes:
-      - 'vol.mysql:/var/lib/mysql'
-      # - '$HOME/dbdump.sql:/docker-entrypoint-initdb.d/dbdump.sql'
+      - vol.mysql:/var/lib/mysql
+      # - $HOME/dbdump.sql:/docker-entrypoint-initdb.d/dbdump.sql
     healthcheck:
       test: [ "CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}" ]
       retries: 3
@@ -55,23 +44,45 @@ services:
     container_name: ${APP_NAME}.redis
     image: redis:alpine
     ports:
-      - '${FORWARD_REDIS_PORT:-6379}:6379'
+      - ${FORWARD_REDIS_PORT:-6379}:6379
     volumes:
-      - 'vol.redis:/data'
+      - vol.redis:/data
     healthcheck:
-      test: [ 'CMD', 'redis-cli', 'ping' ]
+      test: [ CMD, redis-cli, ping ]
+      retries: 3
+      timeout: 5s
+
+  meilisearch:
+    container_name: ${APP_NAME}.meilisearch
+    image: getmeili/meilisearch:v0.28.1
+    ports:
+      - ${FORWARD_MEILISEARCH_PORT:-7700}:7700
+    volumes:
+      - vol.meilisearch:/meili_data
+    healthcheck:
+      test:
+        [
+          CMD,
+          wget,
+          --no-verbose,
+          --spider,
+          http://localhost:7700/health
+        ]
       retries: 3
       timeout: 5s
 
 networks:
   default:
-    name: '${APP_NAME}.net'
+    name: ${APP_NAME}.net
     driver: bridge
 
 volumes:
-  'vol.mysql':
-    name: '${APP_NAME}.vol.mysql'
+  vol.mysql:
+    name: ${APP_NAME}.vol.mysql
     driver: local
-  'vol.redis':
-    name: '${APP_NAME}.vol.redis'
+  vol.redis:
+    name: ${APP_NAME}.vol.redis
+    driver: local
+  vol.meilisearch:
+    name: ${APP_NAME}.vol.meilisearch
     driver: local
